fix grid overflow

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -106,6 +106,10 @@
   grid-auto-rows: minmax(3em, auto);
   gap: 1em;
   text-align: right;
+
+  &_name {
+    overflow: scroll;
+  }
 }
 
 .footer {
@@ -164,6 +168,11 @@
     margin: 3em auto;
     display: inline;
     grid-area: cart;
+  }
+
+  .item {
+    grid-template-columns: repeat(4, 7em);
+    grid-auto-rows: minmax(3em, 4em);
   }
 
   .footer {
